<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_maps_home"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_maps_home" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_rtk"
            android:icon="@drawable/ic_baseline_check_circle_outline_24"
            android:title="@string/menu_rtk" />

        <item
            android:id="@+id/nav_geo_awareness"
            android:icon="@drawable/ic_baseline_layers_clear_24"
            android:title="@string/menu_geo_awareness" />

        <item
            android:id="@+id/nav_point_cloud"
            android:icon="@drawable/ic_point_cloud_24"
            android:title="@string/menu_point_cloud" />

        <item
            android:id="@+id/nav_ortho_preview"
            android:icon="@drawable/ic_ortho_24"
            android:title="@string/menu_ortho_preview" />

        <item
            android:id="@+id/nav_debug"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_debug" />

    </group>
</menu>
