<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_workflow_panel"
    style="@style/Widget.DroneServices.Panel.MapRight"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_panel_actions"
        style="@style/TextAppearance.DroneServices.MapPanelTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ds_space_xs"
        android:text="@string/home_panel_actions_subtitle"
        style="@style/TextAppearance.DroneServices.MapPanelSubtitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ds_space_lg"
        android:text="@string/home_panel_top_actions"
        style="@style/TextAppearance.DroneServices.PanelLabel" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ds_space_xs"
        android:text="@string/home_panel_top_actions_hint"
        style="@style/TextAppearance.DroneServices.MapPanelSubtitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ds_space_lg"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.DroneServices.Button.MapLight"
            android:id="@+id/save_mission"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/ds_space_sm"
            android:layout_weight="1"
            android:text="@string/save" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.DroneServices.Button.MapDark"
            android:id="@+id/exit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/exit" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.DroneServices.Button.MapEmphasis"
        android:id="@+id/uploadMission"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/ds_space_md"
        android:text="@string/upload_mission" />
</LinearLayout>
